* Replace `AstWeakReferenceParser` with `NonContainmentReferenceHandler`.
* Delete `ReferenceHelper` (no longer used).
* Delete `SysMLUploadDocumentReportProvider` as it is not functional.
* Most components used in the transformation now require a `MessageReporter` instance to collect transformation messages.

=== Dependency update

=== Bug fixes

=== Improvements

- https://github.com/eclipse-syson/syson/issues/829[#829] [metamodel] `OccurrenceUsag#portionKind` is now unsettable and its default value is `null`.
- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in import module, by making it more generic
- https://github.com/eclipse-syson/syson/issues/818[#818] [export] Add partial support of `OccurrenceDefinition` and 'OccurrenceUsage` in export from model to textual SysMLv2.

=== New features

- https://github.com/eclipse-syson/syson/issues/802[#802] [diagrams] Handle imported package elements in diagrams.

== v2024.11.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
The following classes have been renamed to reflect their new usage:
* Rename `UseCaseDefinitionActorsCompartmentNodeDescriptionProvider` to `CaseDefinitionActorsCompartmentNodeDescriptionProvider`
* Rename `UseCaseDefinitionObjectiveRequirementCompartmentNodeDescriptionProvider` to `CaseDefinitionObjectiveRequirementCompartmentNodeDescriptionProvider`
* Rename `UseCaseDefinitionSubjectCompartmentNodeDescriptionProvider` to `CaseDefinitionSubjectCompartmentNodeDescriptionProvider`
* Rename `UseCaseUsageActorsCompartmentNodeDescriptionProvider` to `CaseUsageActorsCompartmentNodeDescriptionProvider`
* Rename `UseCaseUsageObjectiveRequirementCompartmentNodeDescriptionProvider` to `CaseUsageObjectiveRequirementCompartmentNodeDescriptionProvider`
* Rename `UseCaseUsageSubjectCompartmentNodeDescriptionProvider` to `CaseUsageSubjectCompartmentNodeDescriptionProvider`